--- a/serverless.yml
+++ b/serverless.yml
@@ -8,11 +8,12 @@ provider:
   runtime: python3.10
   stage: ${opt:stage, 'dev'}
   region: eu-west-3
-  deploymentBucket:	sls-deployment-bucket-${env:CI_ENV}
+  deploymentBucket: sls-deployment-bucket-${env:CI_ENV}
   environment:
-    SPREADSHEET_ID: ${env:SPREADSHEET_ID}
     BUCKET_NAME: ${env:BUCKET_NAME}
     BUCKET_KEY: ${env:BUCKET_KEY}
+    LOG_LEVEL: INFO
+    SPREADSHEET_ID: ${env:SPREADSHEET_ID}
   iamRoleStatements:
     - Effect: "Allow"
       Action:
@@ -27,5 +28,5 @@ functions:
     timeout: 60
     events:
       - schedule:
-            rate: cron(0 1 * * ? *)
-            name: google-spreadsheet-to-s3-sched
+          rate: cron(0 1 * * ? *)
+          name: google-spreadsheet-to-s3-sched
