Serverless ignore package patterns

--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,14 @@
 service: google-spreadsheet-to-s3
 
+package:
+  patterns:
+    - "!.github/workflows/**"
+    - "!.gitignore"
+    - "!assets/**"
+    - "!LICENSE"
+    - "!README.md"
+    - "!terraform/**"
+
 plugins:
   - serverless-python-requirements
 
