--- a/.github/workflows/sls-deploy.yml
+++ b/.github/workflows/sls-deploy.yml
@@ -52,7 +52,7 @@ jobs:
           CI_ENV: prod
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          DEPLOYMENT_BUCKET: ${{ secrets.DEPLOYMENT_BUCKET_PREFIX }}-${{ secrets.AWS_REGION }}
+          DEPLOYMENT_BUCKET: ${{ secrets.DEPLOYMENT_BUCKET_PREFIX }}-eu-west-3
           SPREADSHEET_ID: ${{ vars.SPREADSHEET_ID }}
           BUCKET_NAME: ${{ vars.BUCKET_NAME }}
           BUCKET_KEY: ${{ vars.BUCKET_KEY }}
