--- a/.github/workflows/sls-deploy.yml
+++ b/.github/workflows/sls-deploy.yml
@@ -16,7 +16,9 @@ jobs:
       matrix:
         node-version: [18.x]
     steps:
-      - uses: actions/checkout@v4
+      - name: Git Checkout
+        uses: actions/checkout@v4
+
       - name: Create JSON
         id: create-json
         uses: jsdaniell/create-json@v1.2.3
@@ -24,6 +26,7 @@ jobs:
           name: "service-account-credentials.json"
           json: ${{ secrets.SERVICE_ACCOUNT_CREDENTIALS }}
           dir: "serverless/"
+
       - name: Deploy created JSON
         run: |
           git config --global user.email "${GITHUB_ACTOR_ID}+${GITHUB_ACTOR}@users.noreply.github.com"
@@ -32,17 +35,22 @@ jobs:
           git add --force service-account-credentials.json
           git status
           git commit -a -m "Deploy Service Account Credentials JSON"
+
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+
       - run: npm shrinkwrap
+
       - run: npm ci
+
       - name: serverless install plugins
         uses: serverless/github-action@v3.2
         with:
           args: -c "cd ./serverless && serverless plugin install --name serverless-python-requirements"
           entrypoint: /bin/sh
+
       - name: serverless deploy
         uses: serverless/github-action@v3.2
         with:
@@ -52,7 +60,6 @@ jobs:
           CI_ENV: prod
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          DEPLOYMENT_BUCKET: ${{ secrets.DEPLOYMENT_BUCKET_PREFIX }}-eu-west-3
-          SPREADSHEET_ID: ${{ vars.SPREADSHEET_ID }}
           BUCKET_NAME: ${{ vars.BUCKET_NAME }}
           BUCKET_KEY: ${{ vars.BUCKET_KEY }}
+          SPREADSHEET_ID: ${{ vars.SPREADSHEET_ID }}
