Automatically prune Lambda versions

--- a/.github/workflows/sls-remove.yml
+++ b/.github/workflows/sls-remove.yml
@@ -25,7 +25,12 @@ jobs:
       - name: serverless install plugins
         uses: serverless/github-action@v3.2
         with:
-          args: -c "cd ./serverless && serverless plugin install --name serverless-python-requirements"
+          args: |
+            -c "
+            cd ./serverless &&
+            serverless plugin install --name serverless-python-requirements &&
+            serverless plugin install --name serverless-prune-plugin
+            "
           entrypoint: /bin/sh
 
       - name: serverless remove
