--- a/.github/workflows/sls-remove.yml
+++ b/.github/workflows/sls-remove.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x]
+        node-version: [20.x]
     steps:
       - name: Git Checkout
         uses: actions/checkout@v4
@@ -23,7 +23,7 @@ jobs:
       - run: npm ci
 
       - name: serverless install plugins
-        uses: serverless/github-action@v3.2
+        uses: serverless/github-action@v4
         with:
           args: |
             -c "
@@ -34,14 +34,13 @@ jobs:
           entrypoint: /bin/sh
 
       - name: serverless remove
-        uses: serverless/github-action@v3.2
+        uses: serverless/github-action@v4
         with:
           args: -c "cd ./serverless && serverless remove --stage ${{ env.CI_ENV }} --verbose"
           entrypoint: /bin/sh
         env:
           CI_ENV: prod
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
           BUCKET_NAME: ${{ vars.BUCKET_NAME }}
           BUCKET_KEY: ${{ vars.BUCKET_KEY }}
           SPREADSHEET_ID: ${{ vars.SPREADSHEET_ID }}
