--- a/.github/workflows/sls-deploy.yml
+++ b/.github/workflows/sls-deploy.yml
@@ -64,6 +64,8 @@ jobs:
         env:
           CI_ENV: prod
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           BUCKET_NAME: ${{ vars.BUCKET_NAME }}
           BUCKET_KEY: ${{ vars.BUCKET_KEY }}
           SPREADSHEET_ID: ${{ vars.SPREADSHEET_ID }}
